--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
+  carousel_slider: ^5.0.0
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.21.2
 
 dev_dependencies:
   cupertino_icons: ^1.0.0
@@ -18,3 +20,21 @@ dev_dependencies:
 
 flutter:
   uses-material-design: false
+  fonts:
+    - family: Onest
+      fonts:
+      - asset: assets/fonts/Onest-Regular.ttf
+      - asset: assets/fonts/Onest-Bold.ttf
+        weight: 700
+      - asset: assets/fonts/Onest-Light.ttf
+        weight: 300
+      - asset: assets/fonts/Onest-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/Onest-SemiBold.ttf
+        weight: 600
+      - asset: assets/fonts/Onest-ExtraBold.ttf
+        weight: 800
+      - asset: assets/fonts/Onest-Black.ttf
+        weight: 900
+  assets:
+    - assets/images/
